<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_add_story"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addstory.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_add_story"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/space_16"
            android:src="@drawable/ic_baseline_image_search_128"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_from_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/add_story_from_camera"
            app:layout_constraintEnd_toStartOf="@+id/btn_from_gallery"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_from_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/add_story_from_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_from_camera"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_story_with_current_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_from_camera" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:text="Indonesia, Banten"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_current_location" />

        <com.franzandel.dicodingintermediatesubmission.ui.customview.CustomEditText
            android:id="@+id/et_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16"
            android:hint="@string/add_story_description"
            android:inputType="textMultiLine"
            android:lines="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_current_location" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_16"
            android:layout_marginBottom="@dimen/space_16"
            android:text="@string/add_story_upload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
