<resources>
    <string name="app_name">Stories</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmation_password">Confirmation Password</string>
    <string name="hint_name">Name</string>

    <string name="login_button_message">Login</string>
    <string name="login_register_message">No account yet?</string>
    <string name="login_failed">Email or password not match</string>

    <string name="register_button_message">Register</string>
    <string name="register_failed">Register failed, please try again</string>
    <string name="register_already_exist">Email already exist</string>

    <string name="invalid_username">Email should be in email form</string>
    <string name="empty_username">Email should not be empty</string>
    <string name="invalid_password">Password must be more than 5 characters</string>
    <string name="empty_confirmation_password">Confirmation Password should not be empty</string>
    <string name="invalid_confirmation_password">Confirmation Password must match with Password</string>
    <string name="empty_name">Name should not be empty</string>
    <string name="system_error">Unexpected system error, please try again</string>

    <string name="retry">Retry</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="content_add_story">Add story</string>
    <string name="content_widget_story">Story image</string>

    <string name="home_empty_message">No story yet, go add some stories!</string>
    <string name="home_empty_btn_message">Go</string>
    <string name="home_logout_confirmation_title">Are you sure to logout?</string>

    <string name="menu_home_logout">Logout</string>
    <string name="menu_home_settings">Settings</string>
    <string name="menu_location_preference">Show location only</string>
    <string name="menu_detail_map">Open map location</string>

    <string name="add_story_from_camera">From Camera</string>
    <string name="add_story_from_gallery">From Gallery</string>
    <string name="add_story_description">Description</string>
    <string name="add_story_with_current_location">With current location</string>
    <string name="add_story_upload">Upload</string>
    <string name="add_story_success_upload">Success upload</string>
    <string name="add_story_select_image">Please select image first</string>
    <string name="add_story_empty_description">Description should not be empty</string>

    <string name="toolbar_login">Login</string>
    <string name="toolbar_register">Register</string>
    <string name="toolbar_home">Home</string>
    <string name="toolbar_detail">Detail</string>
    <string name="toolbar_add_story">Add Story</string>

    <string name="app_widget_description">Story widget to help you keep up to date</string>
    <string name="widget_empty_message">No story yet, go add some stories!</string>
    <string name="widget_empty_btn_message">Go</string>

    <string name="permission_denied">Permission denied. Please go to settings to enable it.</string>
    <string name="failed_get_image">Failed to get image.</string>
    <string name="failed_show_camera">Failed to show camera.</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>

    <string name="failed_load_location">Failed to load location</string>
    <string name="current_location_not_found">Current location not found. Probably you haven\'t turned on location</string>
</resources>
