<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_camera_x"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camerax.CameraXActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/preview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_capture_image"
        android:layout_width="@dimen/space_60"
        android:layout_height="@dimen/space_60"
        android:layout_marginBottom="@dimen/space_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_capture" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_switch_camera"
        android:layout_width="@dimen/space_40"
        android:layout_height="@dimen/space_40"
        android:layout_marginTop="@dimen/space_16"
        android:layout_marginEnd="@dimen/space_16"
        app:layout_constraintEnd_toEndOf="@+id/preview_view"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_switch_camera" />
</androidx.constraintlayout.widget.ConstraintLayout>
